[package]
name = "json_io"
version = "0.1.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
keywords = ["file", "json", "io", "load", "save"]
description = "A tool for simplifying saving and loading serializable types to and from json files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mitchmindtree/json_io.git"
homepage = "https://github.com/mitchmindtree/json_io"

[dependencies]
rustc-serialize = "0.3.14"

[dev-dependencies]
find_folder = "0.1.1"
