[package]
name = "json_io"
version = "0.2.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
keywords = ["file", "json", "io", "load", "save"]
description = "A tool for simplifying saving and loading serializable types to and from json files."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mitchmindtree/json_io.git"
homepage = "https://github.com/mitchmindtree/json_io"

[dependencies]
rustc-serialize = { optional = true, version = "0.3.19" }
serde = { optional = true, version = "0.7.0" }
serde_json = { optional = true, version = "0.7.0" }

[features]
default = ["rustc_serialization"]
rustc_serialization = ["rustc-serialize"]
serde_serialization = ["serde", "serde_json"]

[dev-dependencies]
find_folder = "0.1.1"
